# rust_verification

./: .coderabbit.yaml  .gitignore  .gitmodules  .ruff.toml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  REQUIREMENTS.md  build.sh  cbmc_commands.sh  checking-partition-contracts.goto  checking-quicksort-contracts.goto  commands_to_run.sh  generate_avocado_stubs.py  generate_cbmc_models.py  generate_specs.py  main.py  notes-llm-verification.md  notes-llm-verification.txt  partition-checking-contracts.goto  partition.goto  prompt.txt  pyproject.toml  qsort-using-swap-contract.goto  qsort.goto  qsort_specs.c  qsort_w_docs.c  quickSort.goto  quicksort.goto  read_cache.py  repair-prompt-template.txt  requirements.txt  run.sh  swap-checking-contracts.goto  swap.goto  system-prompt.txt  translate_specs.py  verification-algorithm.md
analysis/: __init__.py  callgraph.py  codegraph.py
data/: README.md  add.c  divide.c  factorial_iterative.c  factorial_recursive.c  kilo.c  kilo_minimized.c  linked_list.c  max.c  max_min.c  qsort.c  qsort_with_docs.c  stubs.c
docs/: contracts-assigns.html  contracts-assigns.md  contracts-frees.html  contracts-frees.md  contracts-memory-predicates.md  contracts-requires-ensures.md
eval/: README.md  Untitled-1  __init__.py  clause_complexity.py  function_implementation_generator.py  get_verification_counts.py  get_verification_summary.py  implementation_regenerator.py  insert_verified_specs.py  spec_complexity_util.py
models/: .gitignore  __init__.py  conversation_message.py  default_llm_backend.py  llm_backend.py  llm_client.py  (+3 more)
(+303 files in other folders)
